[tool.poetry]
name = "repl_nix_SystemGenerator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.0"
pytest = "^7.4.0"
pytest-mock = "3.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
